(lang dune 2.8)

(name permap)

(license AGPL-3.0-or-later) 

(authors "TODO")

(maintainers "TODO")

;(source
; (github TODO/permap))

(generate_opam_files true)

(package
 (name permap)
 (synopsis "OCaml library/executable to TODO")
 (description
  "permap is an OCaml library/executable to TODO.")
 (tags
  (permap TODO TODO TODO TODO))
 (depends
  (ocaml
   (>= 4.08))))
