(lang dune 2.8)

(implicit_transitive_deps false)

(name permap)

(license AGPL-3.0-or-later)

(authors "swrup <swrup@protonmail.com>" "Léo Andrès <contact@ndrs.fr>")

(maintainers "Léo Andrès <contact@ndrs.fr>")

(source
 (uri git+https://git.zapashcanon.fr/zapashcanon/permap.git))

(homepage https://git.zapashcanon.fr/zapashcanon/permap)

(bug_reports https://git.zapashcanon.fr/zapashcanon/permap/issues)

(documentation https://doc.zapashcanon.fr/permap)

(generate_opam_files true)

(package
 (name permap)
 (synopsis "OCaml library/executable to TODO")
 (description "permap is an OCaml library/executable to TODO.")
 (tags
  (permap forum map local-knownledge ecology permaculture plant))
 (depends
  (ocaml
   (>= 4.08))))
