(rule
 (target js_plant_map.js)
 (deps
  (file ../../../js_plant_map.bc.js))
 (action
  (with-stdout-to
   %{target}
   (cat ../../../js_plant_map.bc.js))))

(rule
 (target js_thread_map.js)
 (deps
  (file ../../../js_thread_map.bc.js))
 (action
  (with-stdout-to
   %{target}
   (cat ../../../js_thread_map.bc.js))))
