(rule
 (target js_plant_map.js)
 (deps
  (file ../../../js_plant_map.bc.js))
 (action
  (with-stdout-to
   %{target}
   (cat ../../../js_plant_map.bc.js))))

(rule
 (target js_babillard.js)
 (deps
  (file ../../../js_babillard.bc.js))
 (action
  (with-stdout-to
   %{target}
   (cat ../../../js_babillard.bc.js))))

(rule
 (target js_newthread.js)
 (deps
  (file ../../../js_newthread.bc.js))
 (action
  (with-stdout-to
   %{target}
   (cat ../../../js_newthread.bc.js))))

(rule
 (target js_thread.js)
 (deps
  (file ../../../js_thread.bc.js))
 (action
  (with-stdout-to
   %{target}
   (cat ../../../js_thread.bc.js))))
