(rule
 (target js_catalog.js)
 (deps
  (file ../../../js/js_catalog.bc.js))
 (action
  (with-stdout-to
   %{target}
   (cat ../../../js/js_catalog.bc.js))))

(rule
 (target js_babillard.js)
 (deps
  (file ../../../js/js_babillard.bc.js))
 (action
  (with-stdout-to
   %{target}
   (cat ../../../js/js_babillard.bc.js))))

(rule
 (target js_newthread.js)
 (deps
  (file ../../../js/js_newthread.bc.js))
 (action
  (with-stdout-to
   %{target}
   (cat ../../../js/js_newthread.bc.js))))

(rule
 (target js_thread.js)
 (deps
  (file ../../../js/js_thread.bc.js))
 (action
  (with-stdout-to
   %{target}
   (cat ../../../js/js_thread.bc.js))))
